--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss-easy-import": "^3.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "^1.5.1"
   }
 }
